ngx-fastcomments functional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Comment Widget Demo</h1>
-
+<div style="text-align: center">
+  <h1>Comment Widget Demo</h1>
+  <lib-fastcomments [config]="{ tenantId: 'demo' }"></lib-fastcomments>
+</div>
