updating config version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div style="text-align: center">
   <h1>Comment Widget Demo</h1>
-  <lib-fastcomments [config]="{ tenantId: 'demo' }"></lib-fastcomments>
+  <lib-fastcomments [config]="config"></lib-fastcomments>
 </div>
